# jst

./: Eval.hs  Expr.hs  Lib.hs  Main.hs  Parser.hs  README.md  Template.hs  Test.hs  Types.hs  array.json  array.tpl  ifelse.tpl  items.json  items.tmpl  jst.cabal  jstmpl.cabal  test.tpl  test2.tpl
