name:                jstmpl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/jstmpl#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable jstmpl
  hs-source-dirs:      .
  main-is:             Main.hs
  other-modules:       Lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , lens
                     , lens-aeson
                     , attoparsec
                     , text
                     , bytestring
                     , optparse-applicative
  default-extensions: OverloadedStrings
